--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         display: none;
         padding: 32px 26px;
         border: none;
-        border-radius: 20px;
+        border-radius: 0;
         background: linear-gradient(160deg, rgba(255, 77, 219, 0.06), rgba(0, 0, 0, 0.8));
         box-shadow: 0 0 32px rgba(255, 77, 219, 0.2), inset 0 0 24px rgba(255, 77, 219, 0.08);
       }
@@ -91,8 +91,8 @@
       /* Vstup pro počet členů inline bez rámečku */
       .inline-field {
         display: flex;
-        align-items: center;
-        gap: 10px;
+        align-items: baseline;
+        gap: 12px;
         flex-wrap: wrap;
       }
 
@@ -101,7 +101,8 @@
         background: transparent;
         border: none;
         box-shadow: none;
-        padding: 6px 0;
+        padding: 0;
+        line-height: 1.4;
       }
 
       .inline-field input:focus {
@@ -116,9 +117,11 @@
         background: transparent;
         border: none;
         box-shadow: none;
-        padding: 6px 0;
+        padding: 2px 0 2px 6px;
         resize: none;
-        min-height: 26px;
+        line-height: 1.4;
+        min-height: calc(1.4em * 15);
+        height: calc(1.4em * 15);
       }
 
       .inline-field textarea:focus {
@@ -126,6 +129,7 @@
         border: none;
         box-shadow: none;
         transform: none;
+        background: transparent;
       }
 
       /* Schovám spinner u number inputu, psaní bude ruční */
@@ -213,7 +217,7 @@
             <textarea
               id="names"
               name="names"
-              rows="1"
+              rows="15"
               placeholder="Alice, Bob, Carol, Dave"
               autocomplete="off"
               required
